@@ -25,6 +25,7 @@ The following changes may create regressions for some external modules, but were
 * The experimental and deprecated module WebserviceClient is completely removed (SOAP technology is deprecated). May be replaced with the stable module Webhook.
 * The dynamic properties ->no_button_delete, ->no_button_edit, ->no_button_copy for $object Product that could be set by an external module must no more
   be set (not allowed by PHP 8.2). A module can already return an array with key 'no_button_delete', 'no_button_edit', 'no_button_copy' for same purpose.
+* The old function dol_bc($var, $moreclass = '') has been removed. If you called it, just stop to call it.
 
 
 ***** ChangeLog for 20.0.0 compared to 19.0 *****
